cc.creativecomputing/log/noname-2011-05-27_22-15-33.txt
[Fri May 27 22:15:33 CEST 2011] [CCLog Line:177:initialize] [INFO] logging to file: log/noname-2011-05-27_22-15-33.txt
[Fri May 27 22:15:33 CEST 2011] [CCImageIOFormat Line:95:createTextureData] [INFO] TextureIO.newTextureData(): BufferedImage type for stream = 5
[Fri May 27 22:15:33 CEST 2011] [CCTextureUtil Line:303:toTextureData] [INFO] TYPE_3BYTE_BGR
[Fri May 27 22:15:33 CEST 2011] [CCTextureUtil Line:400:toTextureData] [INFO] CCAppCapabilities.GL_EXT_abgr:true
[Fri May 27 22:15:33 CEST 2011] [CCTextureUtil Line:401:toTextureData] [INFO] CCAppCapabilities.GL_VERSION_1_2:true
[Fri May 27 22:15:33 CEST 2011] [CCApp:display] [SEVERE] com.jogamp.opencl.CLException$CLBuildProgramFailureException: 
CLDevice [id: 16918016 name: GeForce 8600M GT type: GPU profile: FULL_PROFILE] build log:
<program source>:22:84: error: use of undeclared identifier 'theVelocity'
         float myDisplacement = myFuturePosition.y - height.x * theScale.y + theOffset.y + theVelocity.y;
                                                                                           ^
<program source>:24:33:{24:33-24:38}: error: member reference base type 'float' is not a structure or union
         theAccelerations[myIndex].y += clamp(-myDisplacement.x,-1,1) * theStrength;
                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<program source>:24:55: note: instantiated from:
         theAccelerations[myIndex].y += clamp(-myDisplacement.x,-1,1) * theStrength;
                                               ~~~~~~~~~~~~~~ ^ [error: CL_BUILD_PROGRAM_FAILURE]
	at com.jogamp.opencl.CLException.newException(CLException.java:78)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:381)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:187)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:182)
	at cc.creativecomputing.particles.forces.CCForce.build(CCForce.java:50)
	at cc.creativecomputing.particles.CCParticles.addForce(CCParticles.java:271)
	at cc.creativecomputing.particles.demo.CCDisplaceDemo.setup(CCDisplaceDemo.java:33)
	at cc.creativecomputing.CCApp.display(CCApp.java:562)
	at jogamp.opengl.GLDrawableHelper.display(GLDrawableHelper.java:191)
	at javax.media.opengl.awt.GLCanvas$DisplayAction.run(GLCanvas.java:873)
	at jogamp.opengl.GLDrawableHelper.invokeGL(GLDrawableHelper.java:363)
	at javax.media.opengl.awt.GLCanvas.maybeDoSingleThreadedWorkaround(GLCanvas.java:769)
	at javax.media.opengl.awt.GLCanvas.display(GLCanvas.java:388)
	at javax.media.opengl.awt.GLCanvas.paint(GLCanvas.java:487)
	at sun.awt.RepaintArea.paintComponent(RepaintArea.java:276)
	at sun.awt.RepaintArea.paint(RepaintArea.java:241)
	at apple.awt.ComponentModel.handleEvent(ComponentModel.java:263)
	at java.awt.Component.dispatchEventImpl(Component.java:4790)
	at java.awt.Component.dispatchEvent(Component.java:4544)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:635)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:296)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:211)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:201)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:196)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:188)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)

